k8s-manifestes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-depi-service
spec:
  type: NodePort  # Change this to NodePort
  selector:
    app: petclinic-depi
  ports:
  - port: 5050
    targetPort: 8080  # Ensure this matches your container port
    nodePort: 32228   # You can specify a nodePort or let Kubernetes assign one
