k8s-manifestes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic-depi-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: petclinic.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: petclinic-depi-service
            port:
              number: 5050
